--- a/plugins/css/style.css
+++ b/plugins/css/style.css
@@ -4,7 +4,7 @@
 .parallax {
     width                : 100%;
     height               : 570px;
-    background-image     : url('/img/fondo.png');
+    background-image     : url('img/fondo.png');
     background-repeat    : repeat-x;
     background-repeat    : repeat-y;
     background-position-x: center;
@@ -60,7 +60,7 @@ span { font-size: 1rem; }
 .text-cyan { color: #0dcaf0; }
 
 @media screen and (max-width:757px) {
-    .parallax { background-image     : url('/img/fondo-757.png'); }
+    .parallax { background-image     : url('img/fondo-757.png'); }
     .content-data-personal {
         margin-inline: -17%;
         margin-top: 15%;
